media, file, link in chatInfor

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <meta name="image" content="https://mdmb-social.web.app/logoMDMB.png" />
     <meta
       property="og:image"
-      content="https://mdmb-social.web.app/logoMDMB.png"
+      content="https://mdmb-social0.web.app/logoMDMB.png"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
